--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
 }
 
 .App-logo {
-  height: 40vmin;
+  /* height: 40vmin; */
   pointer-events: none;
 }
 
@@ -35,4 +35,19 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+/* bmjline-blog */
+.footer {
+  text-align: center;
+  padding: 1rem 0;
+}
+
+.footer > .container {
+  padding-right: .5rem;
+  padding-left: .5rem;
+}
+
+.container > .navbar-brand {
+  padding-top: .55rem;
 }
