--- a/src/App.css
+++ b/src/App.css
@@ -39,6 +39,10 @@
 
 /* bmjline-blog */
 .footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  background-color: #f5f5f5;
   text-align: center;
   padding: 1rem 0;
 }
