--- a/src/styles/han.css
+++ b/src/styles/han.css
@@ -6,7 +6,7 @@
   --active-file-text-color: white;
   --bg-color: #fff;
   --text-color: #333;
-  --side-bar-bg-color: #f5f5f5;
+  --side-bar-bg-color: #fff;
   --control-text-color: #666;
 }
 
@@ -36,7 +36,7 @@ html {
 }
 
 pre.md-meta-block {
-  background: #f5f5f5;
+  background: #fff;
   padding: 1em;
   border-radius: 3px;
   font-size: 14px;
@@ -57,7 +57,7 @@ pre.md-meta-block {
 @media screen and (min-width: 1100px) {
   body,
   #footer-word-count-info {
-    background: #f5f5f5;
+    background: #fff;
   }
 
   body.pin-outline,
@@ -93,7 +93,7 @@ pre.md-meta-block {
   body.pin-outline,
   .pin-outline #footer-word-count-info,
   .pin-outline footer {
-    background: #f5f5f5;
+    background: #fff;
   }
 
   .pin-outline #write {
@@ -110,7 +110,7 @@ pre.md-meta-block {
   }
 
   #footer-word-count-info {
-    background: #f5f5f5;
+    background: #fff;
   }
 }
 
