--- a/src/styles/blog.css
+++ b/src/styles/blog.css
@@ -1,3 +1,60 @@
-.blog-main {
-  margin-top: 1rem;
+.blog-post {
+  padding-left: 1em;
+  padding-top: 0.8em;
+}
+
+hr {
+  margin-top: 0.3em !important;
+  margin-bottom: 0em !important;
+  margin-left: -1em !important;
+}
+
+.blog-post:hover {
+  background-color: #f5f5f5;
+}
+
+.blog-title {
+  margin-bottom: 0.5em;
+}
+
+.blog-descr {
+  margin-bottom: 1em;
+}
+
+.blog-continue {
+  color: #1abc9c;
+}
+
+.blog-previous-page {
+  display: inline-block;
+  width: 20%;
+  text-align: right;
+}
+
+.blog-page-num {
+  display: inline-block;
+  width: 60%;
+  text-align: center;
+  font-size: 2rem;
+  color: #666;
+  text-decoration: underline
+}
+
+.blog-forward-page {
+  display: inline-block;
+  width: 20%;
+  text-align: left;
+}
+
+.blog-pagination {
+  color: #cfcfcf;
+  font-size: 2rem;
+}
+
+.blog-arrow:hover > .blog-pagination {
+  color: #1abc9c;
+}
+
+.blog-arrow:hover {
+  background-color: #f5f5f5;
 }
