--- a/src/styles/blog.css
+++ b/src/styles/blog.css
@@ -37,7 +37,7 @@ hr {
   text-align: center;
   font-size: 2rem;
   color: #666;
-  text-decoration: underline
+  text-decoration: underline;
 }
 
 .blog-forward-page {
@@ -57,4 +57,8 @@ hr {
 
 .blog-arrow:hover {
   background-color: #f5f5f5;
+}
+
+.blog hr {
+  margin-left: 0em !important;
 }
