--- a/src/styles/han.css
+++ b/src/styles/han.css
@@ -214,7 +214,7 @@ h6 {
   color: var(--text-color);
   line-height: 1.35;
   font-variant-numeric: lining-nums;
-  margin-bottom: 1em;
+  margin-top: 1em;
   font-weight: 300;
 }
 
